fix: make sure to break links and not words when wrapping text

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -39,7 +39,9 @@ textarea {
   input,
   textarea {
     user-select: text;
-    word-break: break-all;
+     a {
+        word-break: break-all;
+     }
   }
 }
 
